--- a/webpackTemplate/src/scss/mixins/medicamentList.scss
+++ b/webpackTemplate/src/scss/mixins/medicamentList.scss
@@ -17,6 +17,7 @@
         transform: unset;
         overflow: hidden;
         text-wrap: nowrap;
+        align-items: center;
         display: none;
     }
     &__button {
